Fix spacing of ul and ol in notices

--- a/src/themes/hugo-theme-learn/_src/sass/components/_notices.scss
+++ b/src/themes/hugo-theme-learn/_src/sass/components/_notices.scss
@@ -4,6 +4,7 @@ div.notices {
   margin: 2rem 0;
   position: relative;
   padding: 15px;
+  padding-left: 40px;
   color: #555;
 
   p {
@@ -11,7 +12,13 @@ div.notices {
     margin: {
       top: 0;
       bottom: 0;
-      left: 1.5rem;
+    }
+  }
+
+  ul, ol {
+    margin: {
+      top: .5rem;
+      bottom: .5rem;
     }
   }
 
